<resources>
    <string name="app_name">TravelSpend</string>
    <string name="hometraveler">homeTraveler</string>
    <string name="bienvenido_viajero">Bienvenido Viajero</string>
    <string name="qui_res_empezar_una_nueva_aventura">¿Quiéres empezar una nueva aventura?</string>
    <string name="bodyText">Estamos ansiosos de comenzar una nueva aventura contigo. Las mejores aventuras pueden comenzar con un solo click.</string>
    <string name="newTravel">Crear un nuevo viaje</string>
    <string name="nameApp">TravelSpendX</string>
    <string name="appnameIntro">Inicia sesión para comenzar el viaje</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_viaje">NUEVO VIAJE</string>
    <string name="nombre_del_viaje">Nombre del viaje</string>
    <string name="presupuesto_inicial">Presupuesto inicial</string>
    <string name="_0_0">0.0</string>
    <string name="fecha_inicial">Fecha inicial</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="descripcion_breve">Descripcion breve</string>
    <string name="startimgtravel">StartImgTravel</string>
    <string name="presupuesto_aproximado">Presupuesto aproximado</string>
    <string name="breve_descripcci_n">Breve descripcción</string>
    <string name="registrar_viaje">Registrar viaje</string>
    <string name="fecha_final">Fecha final</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="backbutton">BackButton</string>
    <string name="nuevo_gasto">NUEVO GASTO</string>
    <string name="registrar_gasto">Registrar gasto</string>
    <string name="fecha_de_gasto">Fecha de gasto</string>
    <string name="monto_gastado">Monto gastado</string>
    <string name="moneda">Moneda</string>
    <string name="modo_de_pago">Modo de pago</string>
    <string name="fecha_del_gasto">Fecha del gasto</string>
    <string name="concepto_del_gasto">Concepto del gasto</string>
    <string name="accountcircleimage">AccountCircleImage</string>
    <string name="bienvenido_usuario">Bienvenido usuario</string>
    <string name="pmpedrotorres_gmail_com">pmpedrotorres@gmail.com</string>
    <string name="bookmarks">bookmarks</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="submit">Submit</string>
</resources>