<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModalBottomSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerTopTitle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/accountImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/acount_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txtUserName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/containerTopTitle"
                android:scaleType="centerCrop"
                android:contentDescription="@string/accountcircleimage"
                />
            <TextView
                android:id="@+id/containerWelcome"
                app:layout_constraintStart_toEndOf="@id/accountImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txtUserName"

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido_usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
            <TextView
                android:id="@+id/txtUserName"
                app:layout_constraintStart_toEndOf="@id/accountImage"
                app:layout_constraintTop_toBottomOf="@id/containerWelcome"
                app:layout_constraintBottom_toBottomOf="@id/containerTopTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/pmpedrotorres_gmail_com"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/containerTopTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/BodySheetContainer"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/BodySheetContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerTopTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ContainerMyTravels"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/travelsLIst"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/bookmarks"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/bookmarks" />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mis_viajes"
                        app:layout_constraintStart_toEndOf="@id/travelsLIst"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/CloseSession"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ContainerMyTravels">

                    <ImageView
                        android:id="@+id/logout"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/bookmarks"
                        android:src="@drawable/logout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cerrar_sesi_n"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/logout"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>